# jelly_glfw

./: .gitignore  CMakeLists.txt  README.md  setup.bat
.github/workflows/: build.yml
include/jelly/: circle.h  debug_overlay.h  ebo.h  game_context.h  image.h  io.h  mat.h  rectangle.h  renderer.h  renderer_2d.h  shader.h  shape.h  shape_renderer.h  sprite.h  sprite_renderer.h  texture.h  utils.h  vao.h  vbo.h  vec.h  vertex.h
lib/jelly/: debug_overlay.cpp  ebo.cpp  game_context.cpp  image.cpp  io.cpp  mat.cpp  renderer.cpp  renderer_2d.cpp  shader.cpp  shape_renderer.cpp  sprite.cpp  sprite_renderer.cpp  texture.cpp  utils.cpp  vao.cpp  vbo.cpp  vec.cpp
sandbox/: main.cpp
scripts/: setup.bat
shaders/: default.frag  default.vert
src/: main.cpp
tests/: test_mat4.cpp
